--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <link rel="icon" sizes="192x192" href="images/favicon-192.png" />
   <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
 
-<meta name="theme-color" content="#8ecae6">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#8ecae6">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 
 </head>
