Update for Keep Me Well Branding

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="icon" sizes="32x32" href="images/favicon-32x32.png" />
   <link rel="icon" sizes="192x192" href="images/favicon-192.png" />
   <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#8ecae6">
@@ -118,6 +119,9 @@
 <audio id="exhaleSound" src="sounds/exhale.mp3" preload="auto"></audio>
 <audio id="holdSound" src="sounds/hold.mp3" preload="auto"></audio>
 
+<div class="keepmewell" id="bounceDiv" >
+  <img src="images/keepmewell.png" alt="Keep Me Well" class="wellbeingbadge"  />
+</div>
 
 <!-- Pop-up Instructions-->
 <div id="onboardingModal" class="onboarding-overlay">
